--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE: VSCode
+.vscode/*
+!.vscode/settings.json
+
+# husky
+.husky/*
+!.husky/pre-commit
