--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.1"
+  },
+  "lint-staged": {
+    "*.(js,jsx)": "yarn lint",
+    "*.(js,jsx,json,css)": [
+      "yarn prettier . -w",
+      "git add ."
+    ]
   }
 }
