update(data): added-new-project-and-style-fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
   "files.eol": "\n",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "cSpell.words": ["devicon", "fira", "formspree", "tailwindcss"]
+  "cSpell.words": ["angelist", "devicon", "fira", "formspree", "tailwindcss"]
 }
